apps/supersecretmessage/supersecret-deployment.yaml
# supersecret-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supersecret
  namespace: supersecretmessage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supersecret
  template:
    metadata:
      labels:
        app: supersecret
    spec:
      containers:
      - name: supersecret
        image: pipelinedave/supersecretmessage:latest
        ports:
        - containerPort: 80
        - containerPort: 443
