apps/supersecretmessage/supersecret-service.yaml
# supersecret-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supersecret
  namespace: supersecretmessage
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: supersecret
