apps/supersecretmessage/supersecret-ingress.yaml
# supersecret-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supersecret
  namespace: supersecretmessage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/auth-type: forward
    traefik.ingress.kubernetes.io/auth-url: "https://dex.stillon.top/auth"
    traefik.ingress.kubernetes.io/auth-response-headers: X-Auth-User, X-Auth-Email
spec:
  rules:
  - host: bones.stillon.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: supersecret
            port:
              number: 80
  tls:
  - hosts:
    - bones.stillon.top
    secretName: supersecret-tls
